✨ feat: 优化项目配置和依赖管理
🛠️ **更新 Nuxt 配置**
- 增加环境变量和开发代理设置

📦 **调整依赖管理**
- 调整依赖版本为 latest
- 添加 `crypto-js` 和 `nprogress`

🚀 **新增构建脚本**
- 新增多环境构建脚本（staging 和 production）

🎨 **页面与工具优化**
- 启用页面过渡效果
- 启用条件性开发工具

--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "dev:staging": "nuxt dev --dotenv .env.staging",
+    "dev:prod": "nuxt dev --dotenv .env.production",
+    "dev:test": "nuxt dev --dotenv .env.test",
+    "build": "nuxt build",
+    "build:staging": "nuxt build --dotenv .env.staging",
+    "build:prod": "nuxt build --dotenv .env.production",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -14,11 +19,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@pinia/nuxt": "^0.10.1",
-    "axios": "^1.8.2",
+    "@pinia/nuxt": "latest",
+    "@types/crypto-js": "latest",
+    "@types/nprogress": "^0.2.3",
+    "axios": "latest",
+    "crypto-js": "latest",
+    "nprogress": "^0.2.0",
     "nuxt": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.13.1"
+    "@nuxtjs/tailwindcss": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest"
   }
 }
