✨ feat: 集成 Element Plus 并配置主题和样式
🔧 **配置 Element Plus**
- 添加 Element Plus Nuxt 模块
- 配置 Element Plus 主题和样式
- 引入 SCSS 预处理器支持

📦 **依赖管理**
- 新增 Element Plus 相关依赖
- 添加 Sass 预处理器

🎨 **页面集成**
- 在首页添加 Element Plus 测试组件

--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "nuxt": "latest"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.1.1",
     "@nuxtjs/tailwindcss": "latest",
     "autoprefixer": "latest",
+    "element-plus": "^2.9.6",
     "postcss": "latest",
-    "tailwindcss": "latest"
+    "sass": "^1.85.1",
+    "tailwindcss": "latest",
+    "unplugin-element-plus": "^0.9.1"
   }
 }
